--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomePage</title>
+<link rel="stylesheet" href="./attributes/css/style-geral.css">
 </head>
 <body>
-    <header><h2>Meu Portifólio</h2><p>Programador e Designer</p></header>
-    <aside class="left-aside"></aside>
-    <main>
-        <div class="item-card">
-            <h3>Códigos</h3>
-        </div>
-        <div class="item-card">
-            <h3>Artes</h3>
-        </div>
-    </main>
-    <aside class="right-aside"></aside>
-    <footer></footer>
+    <div class="container">
+        <header><h2>Meu Portifólio</h2><p>Programador e Designer</p></header>
+        <aside class="left-aside">left aside</aside>
+        <main class="main-content">
+            <div class="item-card">
+                <h3>Códigos</h3>
+            </div>
+            <div class="item-card">
+                <h3>Artes</h3>
+            </div>
+        </main>
+        <aside class="right-aside">Rigth aside</aside>
+        <footer>Footer</footer>
+    </div>
+
+<script src="./attributes/js/script.js"></script>
 </body>
 </html>
