--- a/index.html
+++ b/index.html
@@ -5,20 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomePage</title>
 <link rel="stylesheet" href="./attributes/css/style-geral.css">
+<link rel="stylesheet" href="./attributes/css/style-itens.css">
 </head>
 <body>
     <div class="container">
         <header><h2>Meu Portifólio</h2><p>Programador e Designer</p></header>
-        <aside class="left-aside">left aside</aside>
+        <aside class="left-aside"></aside>
         <main class="main-content">
+
             <div class="item-card">
-                <h3>Códigos</h3>
+                <div class="title-item">
+                    <h3>Programação</h3>
+                </div>
+                <div class="content-item">
+                    <div class="item-description">
+                        <p>Aqui estão alguns dos meus sites e aplicações.</p>
+                    </div>
+                    <div class="item-link">
+                        <a href="">Ver Códigos</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="item-card">
+                <div class="title-item">
+                    <h3>Artes</h3>
+                </div>
+                <div class="content-item">
+                    <div class="item-description">
+                        <p>Aqui estão alguns das minhas artes.</p>
+                    </div>
+                    <div class="item-link">
+                        <a href="">Ver Artes</a>
+                    </div>
+                </div>
             </div>
             <div class="item-card">
-                <h3>Artes</h3>
+                <div class="title-item">
+                    <h3>Currículos</h3>
+                </div>
+                <div class="content-item">
+                    <div class="item-description">
+                        <p>Aqui estão alguns dos meus melhores modelos de currículo.</p>
+                    </div>
+                    <div class="item-link">
+                        <a href="">Ver Currículos</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item-card">
+                <div class="title-item">
+                    <h3>Papelaria</h3>
+                </div>
+                <div class="content-item">
+                    <div class="item-description">
+                        <p>Aqui estão alguns dos meus Designs para divulgação de serviços.</p>
+                    </div>
+                    <div class="item-link">
+                        <a href="">Ver Designs</a>
+                    </div>
+                </div>
             </div>
         </main>
-        <aside class="right-aside">Rigth aside</aside>
+        <aside class="right-aside"></aside>
         <footer>Footer</footer>
     </div>
 
