--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="content-item">
                     <div class="item-description">
-                        <p>Aqui estão alguns dos meus sites e aplicações.</p>
+                        <p>Aqui estão meus sites e aplicações. <br> Definitivamente, meu maior foco.</p>
                     </div>
                     <div class="item-link">
                         <a href="">Ver Códigos</a>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="content-item">
                     <div class="item-description">
-                        <p>Aqui estão alguns das minhas artes.</p>
+                        <p>Aqui estão minhas artes. Tento vários estilos diferentes.</p>
                     </div>
                     <div class="item-link">
                         <a href="">Ver Artes</a>
@@ -45,14 +45,14 @@
             </div>
             <div class="item-card">
                 <div class="title-item">
-                    <h3>Currículos</h3>
+                    <h3>Jogos</h3>
                 </div>
                 <div class="content-item">
                     <div class="item-description">
-                        <p>Aqui estão alguns dos meus melhores modelos de currículo.</p>
+                        <p>Aqui estão minhas tentativas de fazer games. Não é meu forte.</p>
                     </div>
                     <div class="item-link">
-                        <a href="">Ver Currículos</a>
+                        <a href="">Ver Jogos</a>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                         <p>Aqui estão alguns dos meus Designs para divulgação de serviços.</p>
                     </div>
                     <div class="item-link">
-                        <a href="">Ver Designs</a>
+                        <a href="">Ver Arquivos</a>
                     </div>
                 </div>
             </div>
