--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <p>Aqui estão meus sites e aplicações. <br> Definitivamente, meu maior foco.</p>
                     </div>
                     <div class="item-link">
-                        <a href="">Ver Códigos</a>
+                        <a href="./pages/pProg.html">Ver Códigos</a>
                     </div>
                 </div>
             </div>
@@ -39,7 +39,7 @@
                         <p>Aqui estão minhas artes. Tento vários estilos diferentes.</p>
                     </div>
                     <div class="item-link">
-                        <a href="">Ver Artes</a>
+                        <a href="./pages/pArtes.html">Ver Artes</a>
                     </div>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                         <p>Aqui estão minhas tentativas de fazer games. Não é meu forte.</p>
                     </div>
                     <div class="item-link">
-                        <a href="">Ver Jogos</a>
+                        <a href="./pages/pJogos.html">Ver Jogos</a>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                         <p>Aqui estão alguns dos meus Designs para divulgação de serviços.</p>
                     </div>
                     <div class="item-link">
-                        <a href="">Ver Arquivos</a>
+                        <a href="./pages/pPaper.html">Ver Arquivos</a>
                     </div>
                 </div>
             </div>
