--- a/pages/pProg.html
+++ b/pages/pProg.html
@@ -6,8 +6,8 @@
     <title>Programação</title>
 
 <link rel="stylesheet" href="../attributes/css/style-P.css">
-<link rel="stylesheet" href="../attributes/">
 <link href="https://fonts.googleapis.com/css2?family=Londrina+Sketch&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../attributes/css/style-P_itens.css">
 
 </head>
 <body>
@@ -15,16 +15,14 @@
         <header><h2>Meu Portifólio</h2><p style="text-decoration: underline;">Programação</p></header>
         <aside class="left-aside"></aside>
         <main class="main-content">
-            <div class="item-card">
-                <div class="title-item">
-                    <h3>Programação</h3>
+            <div class="item-box">
+                <div class="item-title">
+                    <h3>JavaScript</h3>
                 </div>
-                <div class="content-item">
-                    <div class="item-description">
-                        <p>Aqui estão meus sites e aplicações. <br> Definitivamente, meu maior foco.</p>
-                    </div>
-                    <div class="item-link">
-                        <a href="./pages/pProg.html">Ver Códigos</a>
+                <div class="item-content">
+                    <img src="../attributes/images/todolist.png" width="100%">
+                    <div class="item-links">
+                        <a href="">Ver Código</a>
                     </div>
                 </div>
             </div>
