--- a/pages/pProg.html
+++ b/pages/pProg.html
@@ -20,8 +20,33 @@
                     <h3>JavaScript</h3>
                 </div>
                 <div class="item-content">
-                    <img src="../attributes/images/todolist.png" width="100%">
+                    <img src="../attributes/images/todolist.png">
                     <div class="item-links">
+                        <a href="">Ver App</a>
+                        <a href="">Ver Código</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item-box">
+                <div class="item-title">
+                    <h3>JavaScript</h3>
+                </div>
+                <div class="item-content">
+                    <img src="../attributes/images/todolist.png">
+                    <div class="item-links">
+                        <a href="">Ver App</a>
+                        <a href="">Ver Código</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item-box">
+                <div class="item-title">
+                    <h3>JavaScript</h3>
+                </div>
+                <div class="item-content">
+                    <img src="../attributes/images/todolist.png">
+                    <div class="item-links">
+                        <a href="">Ver App</a>
                         <a href="">Ver Código</a>
                     </div>
                 </div>
