--- a/pages/pProg.html
+++ b/pages/pProg.html
@@ -22,8 +22,8 @@
                 <div class="item-content">
                     <img src="../attributes/images/todolist.png">
                     <div class="item-links">
-                        <a href="">Ver App</a>
-                        <a href="">Ver Código</a>
+                        <a href="https://mw-limah.github.io/YourTo-Do-List/">Ver App</a>
+                        <a href="https://github.com/MW-Limah/menu_my/edit/main/pages/pProg.html">Ver Código</a>
                     </div>
                 </div>
             </div>
